opam-version: "2.0"
name: "quantex"
version: "0.1.0"
synopsis: "Quantitative Analysis + Simulation DSL"
description: """
QuantDSL is a Domain-Specific Language built to perform quantitative analysis and simulations. 
It supports operations such as Monte Carlo simulations, optimization, and more functions.
"""
authors: [
  "Ryan Sun"
]
license: "MIT"
dev-repo: "git+https://github.com/Ryii/Quant-DSL.git"

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0"}
  "ocamlfind"
]