(test
 (name test_ast)
 (modules test_ast)
 (libraries ounit2 quantex))

(test
 (name test_codegen)
 (modules test_codegen)
 (libraries ounit2 quantex))

(test
 (name test_builtins)
 (modules test_builtins)
 (libraries ounit2 quantex))

(test
 (name test_interpreter)
 (modules test_interpreter)
 (libraries ounit2 quantex))

(test
 (name test_semantics)
 (modules test_semantics)
 (libraries ounit2 quantex))
